--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,14 @@
 {
+    "name": "tsumarika/hiragana",
+    "type": "library",
+    "version": "1.0",
+    "autoload": {
+        "psr-4": {
+            "Tsumari\\Hiragana\\": "src/"
+        }
+    },
     "require": {
         "vlucas/phpdotenv": "^5.6"
-    }
+    },
+    "license": "MIT"
 }
