--- a/composer.json
+++ b/composer.json
@@ -4,11 +4,17 @@
     "version": "1.0",
     "autoload": {
         "psr-4": {
-            "Tsumari\\Hiragana\\": "src/"
+            "Tsumari\\": "src/"
         }
     },
-    "require": {
-        "vlucas/phpdotenv": "^5.6"
+    "autoload-dev": {
+        "psr-4": {
+            "Test\\": "test/"
+        }
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^11.0.1",
+        "vlucas/phpdotenv": "^5.4.1"
     },
     "license": "MIT"
 }
