--- a/composer.json
+++ b/composer.json
@@ -3,8 +3,8 @@
     "type": "library",
     "version": "1.0",
     "autoload": {
-        "psr-4": {
-            "Tsumari\\": "src/"
+        "psr-4": {             
+            "Tsumari\\Hiragana\\": "src/"
         }
     },
     "autoload-dev": {
